--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -13,7 +13,7 @@
     <div th:fragment="footer">
         <script th:src="@{/js/bootstrap.js}"></script>
         <script th:src="@{/js/login.js}"></script>
-        <script th:src="@{/js/login-perro.js}"></script>
+        <!-- <script th:src="@{/js/login-perro.js}"></script>-->
         <script th:src="@{/js/jquery-1.11.3.min.js}"></script>
         <script th:src="@{/js/sidebars.js}"></script>
     </div>
