--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -41,7 +41,7 @@
                             <a class="nav-link text-white" th:href="@{/blog/general}"><b class="style-text">Noticias General</b></a>
                         </li>
                     </div>
-                    <div>
+                    <div sec:authorize="isAuthenticated() && hasRole('ROLE_ADOPTADOR')">
                         <li class="nav-item">
                             <a class="nav-link text-white" th:href="@{/donation/red}"><b class="style-text">Donaciones</b></a>
                         </li>
