--- a/src/main/resources/templates/views/donation/success.html
+++ b/src/main/resources/templates/views/donation/success.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Donación exitosa</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" th:href="@{/css/404.css}">
+    <link rel="shortcut icon" th:href="@{/images/logo.ico}" type="image/x-icon">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
 </head>
+
 <body>
-<h1>Payment Success</h1>
+<div class="container" style="align-items: center;">
+    <div class="row align-items-center text-center">
+        <div class="col-6 error-text">
+            <h1>Gracias!</h1>
+            <p class="T1">Donación exitosa!</p>
+            <p class="T2">La asociación adoptaMe agradece tu apoyo!.</p>
+            <br />
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-light mx-auto" ><a th:href="@{/donation/red}" style="color: black;">Regresar</a></button>
+            </div>
+
+        </div>
+        <div class="col-md-6 d-flex justify-content-center align-items-center" >
+            <img th:src="@{/images/donation.gif}" class="prueba" width="300px" height="150px">
+        </div>
+    </div>
+</div>
+
+
+
+
+
 </body>
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+    body {
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        font-family: "Quicksand";
+
+    }
+
+    h1 {
+        font-size: 200px;
+        color: #6adbd9;
+        text-align: center;
+        margin-top: 100px;
+        text-shadow: 3px 3px 0 #8f8d8d;
+    }
+
+    .btn{
+        text-align: center;
+        background-color: #6adbd9;
+        justify-items: center;
+        margin-left: 180px;
+    }
+
+    .T1 {
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .T2 {
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .prueba {
+        position: relative;
+        -webkit-animation-name: example;
+        -webkit-animation-duration: 4s;
+        animation-name: example;
+        animation-duration: 20;
+        animation-iteration-count: infinite;
+        margin: 10 auto;
+        text-align: center;
+    }
+
+    @-webkit-keyframes example {
+        0% {
+            left: 0px;
+            top: 0px;
+        }
+        75% {
+            left: 50px;
+            top: 0px;
+        }
+        100% {
+            left: 0px;
+            top: 0px;
+        }
+    }
+
+    @keyframes example {
+        0% {
+            left: 0px;
+            top: 0px;
+        }
+        75% {
+            left: 50px;
+            top: 0px;
+        }
+        100% {
+            left: 0px;
+            top: 0px;
+        }
+    }
+</style>
+
 </html>
